added github link and keeping timer paused while image loads

--- a/UI/skd-ref-site/src/app/home/home.component.html
+++ b/UI/skd-ref-site/src/app/home/home.component.html
@@ -14,6 +14,7 @@
                             <li>Submit bugs to <a href='mailto:artomizer@sketchdaily.net'>artomizer@sketchdaily.net</a></li>
                             <li><a href='https://ko-fi.com/artomizer'>Make a small donation</a> so I can <span class='strike'>buy
                                     a boat</span> keep the site up and running</li>
+                            <li>Fix bugs and add new features on <a href='https://github.com/faintpixel/skdRefSite'>github</a></li>
                         </ul>
 
                     </div>
