Preloading next image

--- a/UI/skd-ref-site/src/app/image-viewer/image-viewer.component.html
+++ b/UI/skd-ref-site/src/app/image-viewer/image-viewer.component.html
@@ -43,10 +43,10 @@
 </nav>
 
 <div class='container' (document:keyup)="keyPressed($event)">
-
   <div id="image" *ngIf="imageFound() && image.file !== undefined">
     
-    <img *ngIf="!break" src='{{getUrl(image.file)}}' class='referenceImage' [@fadeOut]="fadeOut" (load)="imageLoaded()">
+    <img *ngIf="!break" [src]='imageUrl' class='referenceImage' [@fadeOut]="fadeOut" (load)="imageLoaded()"/>
+    <img id='nextImage' *ngIf="nextImageUrl != null" [src]="nextImageUrl"/>
     <div *ngIf="break">
       <h2>{{'ImageViewer.TakeABreak' | translate}}</h2>
       {{'ImageViewer.ItsTimeForABreak' | translate}}
