cleaning up the batch manager a bit

--- a/UI/skd-ref-site/src/app/image-categorizer/image-categorizer.component.html
+++ b/UI/skd-ref-site/src/app/image-categorizer/image-categorizer.component.html
@@ -3,98 +3,40 @@
 
 <div id='images'>
 
-  <div *ngFor="let image of images" class='image' [class.selected]="image.selected" (click)="selectImage(image)">
-    <div>
-      <span *ngIf="image.validationStatus; else notValid">READY</span>
-      <ng-template #notValid>
-        <span>Not ready...</span>
-      </ng-template>
-    </div>
-
-    <img src='{{getUrl(image.file)}}' class='thumbnail' />
-
-    <div *ngIf="referenceType == 'FullBody'" class='classifications'>
-      <b>NSFW:</b> {{image.classifications?.nsfw}}
-      <br />
-      <b>Clothed:</b> {{image.classifications?.clothing}}
-      <br />
-      <b>Gender:</b> {{image.classifications?.gender}}
-      <br />
-      <b>Pose:</b> {{image.classifications?.poseType}}
-      <br />
-      <b>View:</b> {{image.classifications?.viewAngle}}
-      <br />
-    </div>
-
-    <div *ngIf="referenceType == 'BodyPart'" class='classifications'>
-      <b>Part:</b> {{image.classifications?.bodyPart}}
-      <br />
-      <b>Gender:</b> {{image.classifications?.gender}}
-      <br />
-      <b>View:</b> {{image.classifications?.viewAngle}}
-      <br />
-    </div>
-
-    <div *ngIf="referenceType == 'Animal'" class='classifications'>
-      <b>Species:</b> {{image.classifications?.species}}
-      <br />
-      <b>Category:</b> {{image.classifications?.category}}
-      <br />
-      <b>View:</b> {{image.classifications?.viewAngle}}
-      <br />
-    </div>
-
-    <div *ngIf="referenceType == 'Structure'" class='classifications'>
-      <b>Type:</b> {{image.classifications?.structureType}}
-      <br />
-    </div>
-
-    <div *ngIf="referenceType == 'Vegetation'" class='classifications'>
-      <b>Type:</b> {{image.classifications?.vegetationType}}
-      <br />
-      <b>Photo Type:</b> {{image.classifications?.photoType}}
-      <br />
-    </div>
-
-    <div class='classifications'>
-      <b>Photographer:</b> {{image.photographer?.name}}
-      <br /> {{image.photographer?.webpage}}
-      <br />
-      <b>Model/Subject:</b> {{image.model?.name}}
-      <br /> {{image.model?.webpage}}
-      <br />
-      <b>Terms:</b> {{image.termsOfUse}}
-      <br />
-      <b>Status:</b> {{image.status}}
-    </div>
-  </div>
+  <app-image-thumbnail *ngFor="let image of images" class='thumbnail' [class.selected]="image.selected" (click)="selectImage(image)" [image]="image" [referenceType]="referenceType"></app-image-thumbnail>
+  
 </div>
 
 <div id='editContainer' *ngIf="referenceType">
   <span *ngIf="!imageSelected()">Select images to begin.</span>
-
+  {{selectedImageCount()}} image(s) selected
 
 
   <fieldset [disabled]="!imageSelected()">
-    {{selectedImageCount()}} image(s) selected
+    
     <div class='row'>
       <div class='col'>
-        <b>Common</b>
-        <br /> Photographer*:
-        <input type='text' [(ngModel)]="selectedPhotographerName" (change)="contactChanged(selectedPhotographerName, 'photographer', 'name')" />
+
+        Photographer*:
+        <input type='text' [(ngModel)]="selectedPhotographerName" (change)="contactChanged(selectedPhotographerName, 'photographer', 'name')"
+        />
         <br /> Photographer Website:
-        <input type='text' [(ngModel)]="selectedPhotographerWebsite" (change)="contactChanged(selectedPhotographerWebsite, 'photographer', 'webpage')" />
-        <br /> Model:
-        <input type='text' [(ngModel)]="selectedModelName" (change)="contactChanged(selectedModelName, 'model', 'name')" />
-        <br /> Model Website:
-        <input type='text' [(ngModel)]="selectedModelWebsite" (change)="contactChanged(selectedModelWebsite, 'model', 'webpage')" />
-        <br /> Terms of Use:
-        <input type='text' [(ngModel)]="selectedTerms" (change)="termsChanged(selectedTerms)" />
-        <br />
-        Status:
+        <input type='text' [(ngModel)]="selectedPhotographerWebsite" (change)="contactChanged(selectedPhotographerWebsite, 'photographer', 'webpage')"
+        />
+        <br /> Status:
         <select [(ngModel)]="selectedStatus" (change)="statusChanged()">
           <option *ngFor="let option of statuses" [value]="option">{{option}}</option>
         </select>
+      </div>
+      <div class='col'>
+          Model:
+          <input type='text' [(ngModel)]="selectedModelName" (change)="contactChanged(selectedModelName, 'model', 'name')" />
+          <br /> Model Website:
+          <input type='text' [(ngModel)]="selectedModelWebsite" (change)="contactChanged(selectedModelWebsite, 'model', 'webpage')"
+          />
+          <br /> Terms of Use:
+          <input type='text' [(ngModel)]="selectedTerms" (change)="termsChanged(selectedTerms)" />
+          
       </div>
       <div class='col'>
         <div *ngIf="referenceType == 'FullBody'">
@@ -177,10 +119,6 @@
       </div>
     </div>
 
-
-    <hr />
-
-
   </fieldset>
-  <button [disabled]="!allReady()" (click)="save()">Finished</button>
+  <button class='btn btn-sm btn-primary' [disabled]="!allReady()" (click)="save()">Finished</button>
 </div>
