--- a/UI/skd-ref-site/src/app/image-categorizer/image-categorizer.component.css
+++ b/UI/skd-ref-site/src/app/image-categorizer/image-categorizer.component.css
@@ -1,20 +1,11 @@
-.thumbnail {
-    
-    height: 100px;
-}
-
-.image {
-    position: relative;
-    display: inline-block;
-    padding: 5px;
-    margin: 5px;
-
-    border-style: solid;
-    border-width: 1px;
-    border-color: lightgray;
-
-    color: darkslategrey;
-    opacity: 0.9;
+#editContainer {
+    position: fixed;
+    bottom: 0;
+    background-color: white;
+    left: 0;
+    right: 0;
+    padding: 0.5em;
+    font-size: x-small;
 }
 
 .selected {
@@ -24,25 +15,15 @@
     opacity: 1;
 }
 
-.classifications
-{
-    font-size: small;
-}
-
-.classifications b {
-    font-size: x-small;
-}
-
-#editContainer {
-    position: fixed;
-    bottom: 0;
-    background-color: white;
-    left: 0;
-    right: 0;
-    padding: 1.5em;
-    font-size: smaller;
-}
-
 #images {
     padding-bottom: 300px;
+}
+
+.thumbnail {
+    display: inline-block;
+}
+
+h3 {
+    font-size: x-small;
+    font-weight: bold;
 }
