--- a/UI/skd-ref-site/src/app/image-categorizer/image-categorizer.component.html
+++ b/UI/skd-ref-site/src/app/image-categorizer/image-categorizer.component.html
@@ -1,3 +1,5 @@
+<app-image-search (searchEvent)="performSearch($event)" ></app-image-search>
+
 <button (click)="selectAll()">Select all</button>
 <button (click)="selectNone()">Select none</button>
 
